修改启动类

--- a/service-consume-server/src/main/resources/application.yml
+++ b/service-consume-server/src/main/resources/application.yml
@@ -13,3 +13,7 @@ server:
 spring:
   application:
     name: service-consume
+  profiles:
+    active: local
+  main:
+    allow-bean-definition-overriding: true
