--- a/service-consume-server/src/main/resources/application.yml
+++ b/service-consume-server/src/main/resources/application.yml
@@ -17,3 +17,16 @@ spring:
     active: local
   main:
     allow-bean-definition-overriding: true
+
+
+feign:
+  hystrix:
+    enabled: true
+
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 20000
